Fixes bug with visibility animation.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
 .modal {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s;
+  transition: all 0.3s;
   position: fixed;
   top: 0;
   right: 0;
